--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Connection": "Server=DESKTOP-GGDRQDD\\SQLEXPRESS;Database=Project;Trusted_Connection=True;TrustServerCertificate=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
